<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:layout_above="@+id/email"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/email"
        android:background="#EAEAEA"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email"
        android:layout_centerInParent="true"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/password"
        android:background="#EAEAEA"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_below="@+id/email"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/register"
        android:backgroundTint="@color/purple_700"
        android:layout_below="@+id/password"
        tools:ignore="UnusedAttribute" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/back"
        android:layout_below="@+id/btn_register"
        android:backgroundTint="#70769C"
        tools:targetApi="lollipop" />

</RelativeLayout>